# LLM-Tasks

./: README.md  pyproject.toml
Second_Task/: main.py
Second_Task/Helpers/: preprocessing.py
