[project]
name = "first-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "gensim>=4.3.3",
    "huggingface-hub>=0.34.4",
    "llama-cpp-python>=0.3.15",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
]
